--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@adonisjs/auth": "^8.0.10",
     "@adonisjs/core": "^5.4.2",
     "@adonisjs/lucid": "^16.3.2",
+    "@adonisjs/mail": "^7.2.4",
     "@adonisjs/repl": "^3.1.7",
+    "@adonisjs/view": "^6.1.1",
     "luxon": "^2.2.0",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "phc-argon2": "^1.1.2",
     "proxy-addr": "^2.0.7",
