--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@adonisjs/mail": "^7.2.4",
     "@adonisjs/repl": "^3.1.7",
     "@adonisjs/view": "^6.1.1",
+    "adonis5-scheduler": "^2.0.2",
     "luxon": "^2.2.0",
+    "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "phc-argon2": "^1.1.2",
