--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@adonisjs/view": "^6.1.1",
     "adonis5-scheduler": "^2.0.2",
     "luxon": "^2.2.0",
+    "moment": "^2.29.1",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
