--- a/.env.example
+++ b/.env.example
@@ -4,13 +4,12 @@ NODE_ENV=development
 APP_KEY=-2ayep6OuxIRD7bEboiTlMCEbe8iw_vZ
 DRIVE_DISK=local
 DB_CONNECTION=pg
-PG_HOST=localhost
-PG_PORT=5432
-PG_USER=lucid
-PG_PASSWORD=
-PG_DB_NAME=lucid
 SMTP_HOST=localhost
 SMTP_PORT=587
 SMTP_USERNAME=<username>
 SMTP_PASSWORD=<password>
 CACHE_VIEWS=false
+DB_CONNECTION=mysql
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_PASSWORD=
