--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,36 @@
-version: "2.2.1"
+version: "3"
+
+networks:
+  luby_projects:
+    external: true
 
 services:
-  app:
-    build: .
-    command: npm run dev
+  api:
+    build:
+      context: .
+      dockerfile: ./docker/api/Dockerfile
     ports:
       - "3333:3333"
     volumes:
-      - .:/usr/app
+      - .:/app
+    networks:
+      - luby_projects
+    depends_on:
+      - mysql
+  mysql:
+    build:
+      context: ./docker/db
+      # dockerfile: ./Docker/db/Dockerfile
     environment:
-      SEQ_DB: prova-adonis
-      SEQ_USER: postgres
-      SEQ_PW: Felipe50
-      PORT: 3333
-      DATABASE_URL: postgres://postgres:Felipe50@localhost:5432/prova-adonis
-  db:
-    image: postgres
-    restart: always
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: prova_adonis
     ports:
-      - '5432:5432'
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: Felipe50
+      - "3306:3306"
+    volumes:
+      - db-data:/var/lib/mysql
+    networks:
+      - luby_projects
 
+volumes:
+  db-data:
 
