--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "adonis5-scheduler": "^2.0.2",
     "luxon": "^2.2.0",
     "moment": "^2.29.1",
+    "mysql": "^2.18.1",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.2",
-    "pg": "^8.7.1",
     "phc-argon2": "^1.1.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
