--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@adonisjs/repl": "^3.1.7",
     "@adonisjs/view": "^6.1.1",
     "adonis5-scheduler": "^2.0.2",
+    "crypto-js": "^4.1.1",
     "luxon": "^2.2.0",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
+    "node-forge": "^0.10.0",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.2",
     "phc-argon2": "^1.1.2",
