--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.2",
     "phc-argon2": "^1.1.2",
+    "phc-bcrypt": "^1.0.7",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
